@@ -5539,7 +5539,8 @@ e_day_view_on_editing_stopped (EDayView *day_view,
 	gchar *text = NULL;
 	CalComponentText summary;
 	CalComponent *comp;
-
+	gboolean on_server;
+	
 	/* Note: the item we are passed here isn't reliable, so we just stop
 	   the edit of whatever item was being edited. We also receive this
 	   event twice for some reason. */
@@ -5584,8 +5585,9 @@ e_day_view_on_editing_stopped (EDayView *day_view,
 	comp = cal_component_new ();
 	cal_component_set_icalcomponent (comp, icalcomponent_new_clone (event->comp_data->icalcomp));
 
-	if (string_is_empty (text) &&
-	    !cal_comp_is_on_server (comp, event->comp_data->client)) {
+	on_server = cal_comp_is_on_server (comp, event->comp_data->client);
+	
+	if (string_is_empty (text) && !on_server) {
 		const char *uid;
 		
 		cal_component_get_uid (comp, &uid);
@@ -5607,34 +5609,35 @@ e_day_view_on_editing_stopped (EDayView *day_view,
 			e_day_view_update_event_label (day_view, day,
 						       event_num);
 	} else if (summary.value || !string_is_empty (text)) {
+		icalcomponent *icalcomp = cal_component_get_icalcomponent (comp);
+
 		summary.value = text;
 		summary.altrep = NULL;
 		cal_component_set_summary (comp, &summary);
 
-		if (cal_component_is_instance (comp)) {
-			CalObjModType mod;
+		if (!on_server) {
+			if (!cal_client_create_object (event->comp_data->client, icalcomp, NULL, NULL))
+				g_message (G_STRLOC ": Could not create the object!");
+		} else {
+			CalObjModType mod = CALOBJ_MOD_ALL;
+			GtkWindow *toplevel;
 			
-			if (recur_component_dialog (comp, &mod, NULL)) {
-				if (cal_client_update_object_with_mod (event->comp_data->client, comp, mod)
-				    == CAL_CLIENT_RESULT_SUCCESS) {
-					if (itip_organizer_is_user (comp, event->comp_data->client) 
-					    && send_component_dialog ((GtkWindow *) gtk_widget_get_toplevel (GTK_WIDGET (day_view)),
-								      event->comp_data->client, comp, FALSE))
-						itip_send_comp (CAL_COMPONENT_METHOD_REQUEST, comp, 
-								event->comp_data->client, NULL);
-				} else {
-					g_message ("e_day_view_on_editing_stopped(): Could not update the object!");
+			if (cal_component_has_recurrences (comp)) {
+				if (!recur_component_dialog (comp, &mod, NULL)) {
+					goto out;
 				}
 			}
-		} else if (cal_client_update_object (event->comp_data->client, comp) == CAL_CLIENT_RESULT_SUCCESS) {
-			if (itip_organizer_is_user (comp, event->comp_data->client) &&
-			    send_component_dialog ((GtkWindow *) gtk_widget_get_toplevel (GTK_WIDGET (day_view)),
-						   event->comp_data->client, comp, FALSE))
-				itip_send_comp (CAL_COMPONENT_METHOD_REQUEST, comp,
-						event->comp_data->client, NULL);
-		} else {
-			g_message ("e_day_view_on_editing_stopped(): Could not update the object!");
+			
+			/* FIXME When sending here, what exactly should we send? */
+			toplevel = GTK_WINDOW (gtk_widget_get_toplevel (GTK_WIDGET (day_view)));
+			if (cal_client_modify_object (event->comp_data->client, icalcomp, mod, NULL)) {
+				if (itip_organizer_is_user (comp, event->comp_data->client) 
+				    && send_component_dialog (toplevel, event->comp_data->client, comp, FALSE))
+					itip_send_comp (CAL_COMPONENT_METHOD_REQUEST, comp, 
+							event->comp_data->client, NULL);
+			}
 		}
+		
 	}
 
  out:
